fix: fix entity document